# voxel-engine

./: .clang-format  .clangd  .gitignore  README.md  meson.build
include/: buffer.hpp  camera.hpp  common.hpp  components.hpp  formatter.hpp  material.hpp  material_list.hpp  meson.build  program.hpp  raii.hpp  renderable.hpp  renderer.hpp  ssbo.hpp  svodag.hpp  texture.hpp  vertex.hpp  vertex_array.hpp  window.hpp
res/: meson.build
src/: common.cpp  main.cpp  meson.build  program.cpp  raii.cpp  raymarcher.cpp  renderer.cpp  texture.cpp  vertex_array.cpp  window.cpp
src/shaders/: 0_first_hit.comp  1_sample_generation.comp  2_temporal_reuse.comp  3_spatial_reuse.comp  4_shade.comp  after_reuse.comp  before_reuse.comp  common.comp  draw_texture.frag  first_hit.comp  initial_samples.comp  meson.build  restirdi.comp  reuse.comp  shade.comp  simple.frag  simple.vert
src/svodag/: meson.build  svodag.cpp
subprojects/: stb.wrap
subprojects/packagefiles/stb/: meson.build
test/: meson.build  test.cpp
